--- a/MyTouch/Base.lproj/Main.storyboard
+++ b/MyTouch/Base.lproj/Main.storyboard
@@ -1,28 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="D83-z1-Cq8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zA1-cW-2F3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Session Detail View Controller-->
         <scene sceneID="rt9-gE-PKn">
             <objects>
-                <viewController id="D83-z1-Cq8" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="cNH-bW-gFK">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="rm8-kv-C2W"/>
-                    </view>
+                <viewController id="D83-z1-Cq8" customClass="SessionDetailViewController" customModule="MyTouch" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="HBU-gQ-TaJ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uo8-qC-Zaj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="659" y="421"/>
+            <point key="canvasLocation" x="2536.8000000000002" y="419.64017991004499"/>
+        </scene>
+        <!--Home Navigation Controller-->
+        <scene sceneID="CuG-QZ-cb3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5Zs-x1-88v" customClass="HomeNavigationController" customModule="MyTouch" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="featured" id="f3F-aV-Z8y"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fqg-5d-dXS">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="D83-z1-Cq8" kind="relationship" relationship="rootViewController" id="Q3T-F7-bZU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="992-fs-FQl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1597.5999999999999" y="419.64017991004499"/>
+        </scene>
+        <!--Home Tab Bar Controller-->
+        <scene sceneID="GXC-zK-2Og">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="zA1-cW-2F3" customClass="HomeTabBarController" customModule="MyTouch" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gW5-b7-b97">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="5Zs-x1-88v" kind="relationship" relationship="viewControllers" id="3gM-le-3RM"/>
+                        <segue destination="zo9-Q9-iSa" kind="relationship" relationship="viewControllers" id="OeR-Ju-HkH"/>
+                        <segue destination="DJn-zk-wNm" kind="relationship" relationship="viewControllers" id="mJr-Ce-hez"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uwt-He-tbx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="658" y="1103"/>
+        </scene>
+        <!--Session List View Controller-->
+        <scene sceneID="Rhg-80-mpc">
+            <objects>
+                <viewController id="umi-l7-Vxu" customClass="SessionListViewController" customModule="MyTouch" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="kOv-BM-YKw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LQp-lE-G04" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2537" y="1104"/>
+        </scene>
+        <!--About View Controller-->
+        <scene sceneID="DPP-aZ-sj9">
+            <objects>
+                <viewController id="fcx-UG-n02" customClass="AboutViewController" customModule="MyTouch" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="eSK-lo-a80"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QuY-aj-fyj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2537" y="1803"/>
+        </scene>
+        <!--Home Navigation Controller-->
+        <scene sceneID="boS-9f-kvF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zo9-Q9-iSa" customClass="HomeNavigationController" customModule="MyTouch" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="mostViewed" id="e5l-ez-jTJ"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1qg-bf-3AO">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="umi-l7-Vxu" kind="relationship" relationship="rootViewController" id="OMU-12-jDw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g3E-R3-JZ6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1598" y="1104"/>
+        </scene>
+        <!--Home Navigation Controller-->
+        <scene sceneID="Ing-L0-FCi">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DJn-zk-wNm" customClass="HomeNavigationController" customModule="MyTouch" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="more" id="b62-Bt-V9H"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ddG-yE-PNQ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fcx-UG-n02" kind="relationship" relationship="rootViewController" id="v0P-oR-W3T"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nFa-q9-65s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1598" y="1803"/>
         </scene>
     </scenes>
 </document>
