--- a/MyTouch/Base.lproj/Main.storyboard
+++ b/MyTouch/Base.lproj/Main.storyboard
@@ -19,11 +19,11 @@
             </objects>
             <point key="canvasLocation" x="2536.8000000000002" y="419.64017991004499"/>
         </scene>
-        <!--hello-->
+        <!--最新-->
         <scene sceneID="CuG-QZ-cb3">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5Zs-x1-88v" customClass="HomeNavigationController" customModule="MyTouch" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="hello" image="icon" id="f3F-aV-Z8y"/>
+                    <tabBarItem key="tabBarItem" title="最新" image="tab_home" id="f3F-aV-Z8y"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fqg-5d-dXS">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -78,11 +78,11 @@
             </objects>
             <point key="canvasLocation" x="2537" y="1803"/>
         </scene>
-        <!--Home Navigation Controller-->
+        <!--所有測驗-->
         <scene sceneID="boS-9f-kvF">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zo9-Q9-iSa" customClass="HomeNavigationController" customModule="MyTouch" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="mostViewed" id="e5l-ez-jTJ"/>
+                    <tabBarItem key="tabBarItem" title="所有測驗" image="tab_list" id="e5l-ez-jTJ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1qg-bf-3AO">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -97,11 +97,11 @@
             </objects>
             <point key="canvasLocation" x="1598" y="1104"/>
         </scene>
-        <!--Home Navigation Controller-->
+        <!--更多-->
         <scene sceneID="Ing-L0-FCi">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DJn-zk-wNm" customClass="HomeNavigationController" customModule="MyTouch" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="more" id="b62-Bt-V9H"/>
+                    <tabBarItem key="tabBarItem" title="更多" image="tab_about" id="b62-Bt-V9H"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ddG-yE-PNQ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -118,6 +118,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon" width="30" height="30"/>
+        <image name="tab_about" width="30" height="30"/>
+        <image name="tab_home" width="30" height="30"/>
+        <image name="tab_list" width="30" height="30"/>
     </resources>
 </document>
